<resources>
    <string name="app_name">MangaReaderd</string>
    <string name="title_activity_destaques">Destaques</string>
    <string name="title_activity_favoritos">Favoritos</string>
    <string name="title_activity_livros_manga">LivrosManga</string>
    <string name="destaques">Destaques</string>
    <string name="favoritos">Favoritos</string>
    <string name="manga">Mangá</string>
    <string name="procura">Procura:</string>
    <string name="g_nero">Género:</string>
    <string name="validar">Validar</string>
    <string name="escreva_aqui">Escreva aqui por favor</string>
    <string name="title_activity_destaques_procura">DestaquesProcura</string>
    <string name="procura_Destaques">Procura</string>
    <string name="cancelar">Cancelar</string>
    <string name="AbriuZona">Abriu a Zona de Destaques</string>
    <string name="AbriuFavoritos">Abriu a Zona dos Favoritos</string>
    <string name="AbriuLivros">Todos OS Livros da aplicação</string>
    <string name="Cancelou">Cancelado</string>
    <string name="Escrever">Escreva aqui o que procura!</string>
    <string name="ProcuraDestaques">Procura nos Destaques</string>
    <string name="title_activity_adicionar">Adicionar</string>
    <string name="Adicionar">Entrou na sequeção ADICIONAR</string>
    <string name="Adicionou">Adicionado com êxito</string>
    <string name="adicionar">Adicionar</string>
    <string name="nome_da_manga">Nome da Mangá:</string>
    <string name="escreva_o_nome">Escreva o nome</string>
    <string name="g_nero_do_livro">Género do Livro:</string>
    <string name="escreva_o_g_nero">Escreva o género</string>
    <string name="data">Data:</string>
    <string name="adicionar_a_data">Adicionar a data</string>
    <string name="adicionar_livro">Adicionar</string>
    <string name="Nome">Escreva aqui o nome</string>
    <string name="EscrevaGenero">Escreva aqui o genero</string>
    <string name="AdicionarData">Adicionar Data</string>
    <string name="Voltar">Voltou para trás</string>
    <string name="voltar_atr_s">Voltar Atrás</string>
    <string name="title_activity_procura_livros">ProcuraLivros</string>
    <string name="EntrouProcura">Entrou na procura</string>
    <string name="hint">hint</string>
    <string name="title_activity_opcoes">Opcoes</string>
    <string name="Opcoes">Abriu a seccção dos Opçôes</string>
    <string name="op_es">Opções</string>
    <string name="title_activity_eliminar">Eliminar</string>
    <string name="title_activity_cancelar_2">Cancelar_2</string>
    <string name="Elimiar">Abriu a opção eliminar</string>
    <string name="cancelar2">Cancelar</string>
    <string name="title_activity_ver_adicionar">VerAdicionar</string>
    <string name="adicionou">Adicionou:</string>
    <string name="retroceder">Retroceder</string>
    <string name="Eliminar2">Foi Eliminado</string>
    <string name="eleminado2">Eliminado2</string>
    <string name="ELIMINAR">ELIMINAR</string>
    <string name="title_activity_editar">Editar</string>
    <string name="Editar">Entrou no editar</string>
    <string name="procura_2">Procura</string>
    <string name="editar_2">Editar</string>
    <string name="Foi_Editado">Editado com Sucesso</string>
    <string name="editar">Editar</string>
    <string name="cancelar_3">Cancelar</string>
    <string name="sair_da_aplica_o">Sair</string>
    <string name="title_activity_inserir_favoritos">InserirFavoritos</string>
    <string name="title_activity_favoritos_alterar">FavoritosAlterar</string>
    <string name="inserir">Inserir</string>
    <string name="alterar">Alterar</string>
    <string name="title_activity_favoritos_eliminar">FavoritosEliminar</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_activity_inserir_destaque">InserirDestaque</string>
    <string name="eliminar4">eliminar4</string>
    <string name="eliminarD">EliminarD</string>
    <string name="eliminado2">Eliminate</string>
    <string name="inserir_click">Inserir click</string>
    <string name="title_activity_inserir_alterar">InserirAlterar</string>

</resources>
